--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ body {
   }
   
   button {
-    padding: 10px;
+    padding:  10px 10px;
+    margin: 10px 10px;
     background-color: #4caf50;
     color: white;
     border: none;
@@ -31,6 +32,6 @@ body {
   }
   
   button:hover {
-    background-color: #45a049;
+    background-color: #45a048;
   }
   
